--- a/style.css
+++ b/style.css
@@ -10,4 +10,9 @@
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+    max-width: 100%; 
+}
+
+.load-immages{
+    display: none;
 }
