--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@
 	box-sizing: border-box;
 }
 
+body{
+    background-color: black;
+}
+
 #gameScreen {
-    /* display: none; */
+    display: none;
 	position: absolute;
     transform: translate(-50%, -50%);
     top: 50%;
@@ -13,10 +17,69 @@
     max-width: 100%; 
 }
 
-.load-images{
+#start-screen{
+    display: block;
+}
+
+#gameOver-screen{
     display: none;
 }
 
-#start-screen{
-    display: block;
+.load-images{
+    display: none;
+}
+.text{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+}
+#start-button{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 70%;
+    left: 50%;
+}
+ .txt-w{
+    color: white;
+    font-family: 'Silkscreen';
+    text-align: center;
+ }
+
+/* CSS */
+.button-89 {
+    cursor: pointer;
+    font-family: 'Silkscreen';
+  --b: 3px;   /* border thickness */
+  --s: .45em; /* size of the corner */
+  --color: #373B44;
+  
+  padding: calc(.5em + var(--s)) calc(.9em + var(--s));
+  color: var(--color);
+  --_p: var(--s);
+  background:
+    conic-gradient(from 90deg at var(--b) var(--b),#0000 90deg,var(--color) 0)
+    var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
+  transition: .3s linear, color 0s, background-color 0s;
+  outline: var(--b) solid #0000;
+  outline-offset: .6em;
+  font-size: 60px;
+
+  border: 0;
+
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-89:hover,
+.button-89:focus-visible{
+  --_p: 0px;
+  outline-color: var(--color);
+  outline-offset: .05em;
+}
+
+.button-89:active {
+  background: var(--color);
+  color: #fff;
 }
