--- a/style.css
+++ b/style.css
@@ -9,16 +9,23 @@ body{
 }
 
 #gameScreen {
-    display: none;
+    display: display;
 	position: absolute;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
     max-width: 100%; 
 }
+h1{
+    font-size: 80px;
+}
 
 #start-screen{
-    display: block;
+    display: none;
+}
+
+#start-text{
+    display: none;
 }
 
 #gameOver-screen{
@@ -34,7 +41,7 @@ body{
     top: 50%;
     left: 50%;
 }
-#start-button{
+#start-button, #retry-button{
     position: absolute;
     transform: translate(-50%, -50%);
     top: 70%;
@@ -63,7 +70,7 @@ body{
   transition: .3s linear, color 0s, background-color 0s;
   outline: var(--b) solid #0000;
   outline-offset: .6em;
-  font-size: 60px;
+  font-size: 40px;
 
   border: 0;
 
